@@ -296,17 +296,13 @@ namespace Ice
 #if DEBUG
 	~CommunicatorI()
 	{
-            /**
-              * We cannot invoke methods on other objects in a destructor.
-              *
 	    lock(this)
 	    {
-		if(!_destroyed)
+		if(!_destroyed && !Environment.HasShutDownStarted)
 		{
 		    _instance.logger().warning("Ice::Communicator::destroy() has not been called");
 		}
 	    }
-              **/
 	}
 #endif
 
