@@ -19,7 +19,10 @@ public sealed class ServantLocatorI : Ice.LocalObjectImpl, Ice.ServantLocator
     
     ~ServantLocatorI()
     {
-        test(_deactivated);
+	lock(this)
+	{
+	    test(_deactivated);
+	}
     }
     
     private static void test(bool b)
@@ -32,7 +35,10 @@ public sealed class ServantLocatorI : Ice.LocalObjectImpl, Ice.ServantLocator
     
     public Ice.Object locate(Ice.Current current, out Ice.LocalObject cookie)
     {
-        test(!_deactivated);
+	lock(this)
+	{
+	    test(!_deactivated);
+	}
         
         test(current.id.category.Length == 0);
         test(current.id.name.Equals("test"));
@@ -44,7 +50,10 @@ public sealed class ServantLocatorI : Ice.LocalObjectImpl, Ice.ServantLocator
     
     public void finished(Ice.Current current, Ice.Object servant, Ice.LocalObject cookie)
     {
-        test(!_deactivated);
+	lock(this)
+	{
+	    test(!_deactivated);
+	}
         
         Cookie co = (Cookie) cookie;
         test(co.message().Equals("blahblah"));
@@ -52,9 +61,12 @@ public sealed class ServantLocatorI : Ice.LocalObjectImpl, Ice.ServantLocator
     
     public void deactivate(string category)
     {
-        test(!_deactivated);
+	lock(this)
+	{
+	    test(!_deactivated);
         
-        _deactivated = true;
+	    _deactivated = true;
+	}
     }
     
     private bool _deactivated;
